welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
    recop(h,j,l,T)
                ^